@@ -2,6 +2,7 @@
 
 export(MizerParams)
 export(MizerSim)
+export(add_species)
 export(getBiomass)
 export(getCommunitySlope)
 export(getEGrowth)
@@ -34,6 +35,7 @@ export(plotSpectra)
 export(plotYield)
 export(plotYieldGear)
 export(project)
+export(retune_abundance)
 export(set_community_model)
 export(set_scaling_model)
 export(set_trait_model)
